--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 <head>
 
     <title>Android - Showing Thumbnail for link in WhatsApp || og:image meta-tag doesn&#39;t work - Stack Overflow</title>
-    <link rel="shortcut icon" href="https://cdn.sstatic.net/Sites/stackoverflow/Img/favicon.ico?v=ec617d715196">
-    <link rel="apple-touch-icon" href="https://cdn.sstatic.net/Sites/stackoverflow/Img/apple-touch-icon.png?v=c78bd457575a">
-    <link rel="image_src" href="https://cdn.sstatic.net/Sites/stackoverflow/Img/apple-touch-icon.png?v=c78bd457575a"> 
-    <link rel="search" type="application/opensearchdescription+xml" title="Stack Overflow" href="/opensearch.xml">
-    <link rel="canonical" href="https://stackoverflow.com/questions/25100917/showing-thumbnail-for-link-in-whatsapp-ogimage-meta-tag-doesnt-work" />
+    <!-- <link rel="shortcut icon" href="https://cdn.sstatic.net/Sites/stackoverflow/Img/favicon.ico?v=ec617d715196"> -->
+    <!-- <link rel="apple-touch-icon" href="https://cdn.sstatic.net/Sites/stackoverflow/Img/apple-touch-icon.png?v=c78bd457575a"> -->
+    <link rel="image_src" href="https://gautamz07.github.io/images/apple-touch-icon.png"> 
+    <!-- <link rel="search" type="application/opensearchdescription+xml" title="Stack Overflow" href="/opensearch.xml"> -->
+    <link rel="canonical" href="https://gautamz07.github.io/images/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
     <meta property="og:type" content= "website" />
-    <meta property="og:url" content="https://stackoverflow.com/questions/25100917/showing-thumbnail-for-link-in-whatsapp-ogimage-meta-tag-doesnt-work"/>
+    <meta property="og:url" content="https://gautamz07.github.io"/>
     <meta property="og:site_name" content="Stack Overflow" />
-    <meta property="og:image" itemprop="image primaryImageOfPage" content="https://cdn.sstatic.net/Sites/stackoverflow/Img/apple-touch-icon@2.png?v=73d79a89bded" />
+    <meta property="og:image" itemprop="image primaryImageOfPage" content="https://gautamz07.github.io/images/apple-touch-icon.png" />
     <!-- <meta name="twitter:card" content="summary"/>
     <meta name="twitter:domain" content="stackoverflow.com"/>
     <meta name="twitter:title" property="og:title" itemprop="name" content="Showing Thumbnail for link in WhatsApp || og:image meta-tag doesn&#x27;t work" />
