change to title

--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <!DOCTYPE html>
 
 
-<html itemscope itemtype="http://schema.org/QAPage" class="html__responsive">
-
+<html itemscope itemtype="http://schema.org/QAPage">
 <head>
-
-    <title>Android - Showing Thumbnail for link in WhatsApp || og:image meta-tag doesn&#39;t work - Stack Overflow</title>
+    <title>Gautams Kitchen - When the sun goes down and the wind blows sideways</title>
     <!-- <link rel="shortcut icon" href="https://cdn.sstatic.net/Sites/stackoverflow/Img/favicon.ico?v=ec617d715196"> -->
     <!-- <link rel="apple-touch-icon" href="https://cdn.sstatic.net/Sites/stackoverflow/Img/apple-touch-icon.png?v=c78bd457575a"> -->
     <link rel="image_src" href="https://gautamz07.github.io/images/apple-touch-icon.png"> 
