--- a/c.html
+++ b/c.html
@@ -11,7 +11,7 @@
     <meta property="og:title" itemprop="name" content="Gautams Kitchen - When the sun goes down and the wind blows sideways" />
     <meta property="og:description" itemprop="description" content="Descriptions - Gautams Kitchen - When the sun goes down and the wind blows sideways" />
     <meta property="og:type" content= "website" />
-    <meta property="og:url" content="https://gautamz07.github.io/b.html"/>
+    <meta property="og:url" content="https://gautamz07.github.io/c.html"/>
     <meta property="og:site_name" content="Stack Overflow" />
     <meta property="og:image" itemprop="image primaryImageOfPage" content="https://gautamz07.github.io/images/apple-touch-icon.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
