--- a/f.html
+++ b/f.html
@@ -11,7 +11,7 @@
     <meta property="og:title" itemprop="name" content="Nimos Kitchen - Dry run | Test run" />
     <meta property="og:description" itemprop="description" content="Description - Nimos Kitchen - Dry run | Test run" />
     <meta property="og:type" content= "website" />
-    <meta property="og:url" content="https://gautamz07.github.io/e.html"/>
+    <meta property="og:url" content="https://gautamz07.github.io/f.html"/>
     <meta property="og:site_name" content="Stack Overflow" />
     <meta property="og:image" itemprop="image primaryImageOfPage" content="https://gautamz07.github.io/images/square.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
