--- a/i.html
+++ b/i.html
@@ -8,10 +8,10 @@
     <link rel="image_src" href="https://cdn.myshopmatic.com/images/4PGOJ9/w2vjYQXEjw.png"> 
     <link rel="canonical" href="https://cdn.myshopmatic.com/images/4PGOJ9/w2vjYQXEjw.png" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
-    <meta property="og:title" itemprop="name" content="Nimos Kitchen - Dry run | Test run" />
-    <meta property="og:description" itemprop="description" content="Description - Nimos Kitchen - Dry run | Test run" />
+    <meta property="og:title" itemprop="name" content="Nimos Kitchen - Dry run | Test run - For ALPHA - I" />
+    <meta property="og:description" itemprop="description" content="Description - Nimos Kitchen - Dry run | Test run - For ALPHA - I" />
     <meta property="og:type" content= "website" />
-    <meta property="og:url" content="https://gautamz07.github.io/h"/>
+    <meta property="og:url" content="https://gautamz07.github.io/i"/>
     <meta property="og:site_name" content="Stack Overflow" />
     <meta property="og:image" itemprop="image primaryImageOfPage" content="https://cdn.myshopmatic.com/images/4PGOJ9/w2vjYQXEjw.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
